--- a/index.html
+++ b/index.html
@@ -38,19 +38,23 @@
     .section {
       padding: 4rem 10%;
       min-height: 100vh;
+      background-size: cover;
+      background-position: center;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
       animation: fadeInUp 1s ease;
     }
     h2 {
       border-bottom: 2px solid #444;
       display: inline-block;
       padding-bottom: 0.5rem;
-    }
-    .projects, .skills, .experience {
-      display: grid;
-      gap: 2rem;
+      background: rgba(0,0,0,0.6);
+      padding: 0.5rem 1rem;
+      border-radius: 8px;
     }
     .card {
-      background: #1a1a1a;
+      background: rgba(0,0,0,0.7);
       padding: 1.5rem;
       border-radius: 12px;
       box-shadow: 0 4px 10px rgba(0,0,0,0.4);
@@ -68,24 +72,84 @@
       from { opacity: 0; transform: translateY(40px); }
       to { opacity: 1; transform: translateY(0); }
     }
+    .overlay {
+      background: rgba(0,0,0,0.5);
+      padding: 2rem;
+      border-radius: 12px;
+    }
   </style>
 </head>
 <body>
   <header>
     <h1>Aniruthan Jaganath</h1>
     <nav>
-      <a href="index.html">Home</a>
-      <a href="projects.html">Projects</a>
-      <a href="skills.html">Skills</a>
-      <a href="experience.html">Experience</a>
-      <a href="contact.html">Contact</a>
+      <a href="#home">Home</a>
+      <a href="#projects">Projects</a>
+      <a href="#skills">Skills</a>
+      <a href="#experience">Experience</a>
+      <a href="#contact">Contact</a>
     </nav>
   </header>
 
-  <!-- Home Page -->
-  <section class="section" id="home">
-    <h2>About Me</h2>
-    <p>I’m a high school student passionate about computer engineering, robotics, and building innovative projects like <b>EcoSort</b>. I’m working toward CMU and love coding, problem-solving, and helping others.</p>
+  <!-- Home -->
+  <section class="section" id="home" style="background-image: url('https://images.unsplash.com/photo-1581090700227-4c4f50c0f4b0');">
+    <div class="overlay">
+      <h2>About Me</h2>
+      <p>I’m a high school student passionate about computer engineering, robotics, and building innovative projects like <b>EcoSort</b>. I’m working toward CMU and love coding, problem-solving, and helping others.</p>
+    </div>
+  </section>
+
+  <!-- Projects -->
+  <section class="section" id="projects" style="background-image: url('https://images.unsplash.com/photo-1518770660439-4636190af475');">
+    <div class="overlay">
+      <h2>Projects</h2>
+      <div class="card">
+        <h3>Mental Journal (AI-powered)</h3>
+        <p>AI-driven journaling app that provides feedback and advice based on daily reflections.</p>
+        <p><b>Tech:</b> JavaScript, AI/ML APIs</p>
+      </div>
+      <div class="card">
+        <h3>EcoSort</h3>
+        <p>Smart recycling system using an AI-detection webcam to decide if an item is recyclable or trash.</p>
+        <p><b>Tech:</b> Robotics, Computer Vision, Python</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- Skills -->
+  <section class="section" id="skills" style="background-image: url('https://images.unsplash.com/photo-1519389950473-47ba0277781c');">
+    <div class="overlay">
+      <h2>Skills</h2>
+      <ul>
+        <li><b>Programming:</b> Java, JavaScript</li>
+        <li><b>Tools:</b> Google Workspace, Excel, Onshape</li>
+        <li><b>Other:</b> Robotics, AI prototyping</li>
+      </ul>
+    </div>
+  </section>
+
+  <!-- Experience -->
+  <section class="section" id="experience" style="background-image: url('https://images.unsplash.com/photo-1526378722445-4aa1124b774f');">
+    <div class="overlay">
+      <h2>Experience & Activities</h2>
+      <ul>
+        <li><b>SAT Tutor</b> – Schoolhouse (helped peers with SAT prep)</li>
+        <li><b>STEM Camp Leader</b> – Internship guiding students in robotics & engineering</li>
+        <li><b>Science Olympiad</b> – Placed 6th in state-level events</li>
+        <li><b>Business Professionals of America (BPA)</b> – Competed at state</li>
+        <li><b>Math Team</b> – Competitive problem solving</li>
+        <li><b>VP, Computer Science Club</b> – Organized hackathons and coding competitions</li>
+      </ul>
+    </div>
+  </section>
+
+  <!-- Contact -->
+  <section class="section" id="contact" style="background-image: url('https://images.unsplash.com/photo-1555066931-4365d14bab8c');">
+    <div class="overlay">
+      <h2>Contact</h2>
+      <p>📧 Email: <a href="mailto:Jaganath.aniruthan@gmail.com" style="color:#fff;">Jaganath.aniruthan@gmail.com</a></p>
+      <p>🔗 GitHub: <a href="https://github.com/your-username" target="_blank" style="color:#fff;">github.com/your-username</a></p>
+    </div>
   </section>
 
   <footer>
