--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
   <section class="section" id="home" style="background-image: url('https://images.unsplash.com/photo-1581090700227-4c4f50c0f4b0');">
     <div class="overlay">
       <h2>About Me</h2>
-      <p>I’m a high school student passionate about computer engineering, robotics, and building innovative projects like <b>EcoSort</b>. I’m working toward CMU and love coding, problem-solving, and helping others.</p>
+      <p>I’m a high school student passionate about computer engineering, robotics, and building innovative projects. I’m working toward CMU and love coding, problem-solving, and helping others.</p>
     </div>
   </section>
 
@@ -107,11 +107,6 @@
         <h3>Mental Journal (AI-powered)</h3>
         <p>AI-driven journaling app that provides feedback and advice based on daily reflections.</p>
         <p><b>Tech:</b> JavaScript, AI/ML APIs</p>
-      </div>
-      <div class="card">
-        <h3>EcoSort</h3>
-        <p>Smart recycling system using an AI-detection webcam to decide if an item is recyclable or trash.</p>
-        <p><b>Tech:</b> Robotics, Computer Vision, Python</p>
       </div>
     </div>
   </section>
@@ -139,6 +134,7 @@
         <li><b>Business Professionals of America (BPA)</b> – Competed at state</li>
         <li><b>Math Team</b> – Competitive problem solving</li>
         <li><b>VP, Computer Science Club</b> – Organized hackathons and coding competitions</li>
+        <li><b>Presented EcoSort</b> – Smart recycling system that uses AI vision to classify waste</li>
       </ul>
     </div>
   </section>
